ros_dev_ws/log/build_2021-02-22_15-44-22/teensy/stderr.log
  File "/home/pop/Documents/wqdrone/ros_dev_ws/install/teensy/lib/python3.8/site-packages/teensy/teensy_pub.py", line 54
    if begin == "GPS"
                    ^
SyntaxError: invalid syntax

